# Arduino-CMake-Template

./: .gitignore  CMakeLists.txt  DevelNotes.md  Readme.md  local.cmake  local.cmake.example  shell-avr-gcc.bat
cmake/: Arduino.cmake  StandardProjectSettings.cmake
config/: WelcomeShell.txt  config.bat
libs/libarduinocore/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
